# elevator-commissioning-tracker

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.full.yml  docker-compose.yml
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/app/: main.py
apps/api/app/config/: settings.py
apps/api/app/core/: exceptions.py
apps/api/app/db/: session.py
apps/api/app/middleware/: request_id.py
apps/api/app/schemas/: __init__.py  commissioning.py  commissioning_overview.py  dashboard.py  elevator.py  elevator_floor.py  final_validation.py  flag_adjustment.py  leveling_measurement.py  leveling_summary.py  parameter.py  process_step.py  project.py  test_run.py  test_run_comparison.py  test_type.py  zone_leveling.py
apps/api/app/services/: commissioning.py  commissioning_overview.py  dashboard.py  elevator_floors.py  elevators.py  final_validation.py  flag_adjustments.py  leveling_measurements.py  leveling_summary.py  parameter_definition_seed.py  parameter_definitions.py  process_steps.py  projects.py  test_run_comparison.py  test_run_parameters.py  test_runs.py  test_type_seed.py  test_types.py  zone_leveling.py
apps/api/app/utils/: hex_values.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_core_models.py  (+6 more)
apps/api/tests/: conftest.py  test_commissioning_overview.py  test_commissioning_workflow.py  test_core_crud.py  test_final_validation.py  test_flag_adjustments.py  test_health.py  test_leveling_measurements.py  test_test_database_safety.py  test_test_runs_and_parameters.py  test_zone_leveling_analysis.py
(+77 files in other folders)
